overflow fix

--- a/wp-content/themes/v1/assets/stylesheets/layout/_footer.scss
+++ b/wp-content/themes/v1/assets/stylesheets/layout/_footer.scss
@@ -1,5 +1,6 @@
 footer {
-  padding: 6em 0;
+  @include section;
+  // padding: 6em 0;
   background-color: rgba($background, 0.76);
 
   img {
