--- a/wp-content/themes/v1/assets/stylesheets/layout/_global.scss
+++ b/wp-content/themes/v1/assets/stylesheets/layout/_global.scss
@@ -1,3 +1,9 @@
+html, body {
+  -webkit-text-size-adjust: 100%;
+  min-height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
